k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cartiva-ingress
spec:
  tls:
    - hosts:
        - staging.cartiva.mall
        - api-staging.cartiva.mall
      secretName: staging-cartiva-tls-certs
  rules:
    - host: staging.cartiva.mall
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cartiva-api
                port:
                  number: 5001
    - host: api-staging.cartiva.mall
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cartiva-api
                port:
                  number: 5001
